--- a/share/index.html
+++ b/share/index.html
@@ -83,6 +83,17 @@
             z-index: 100;
         }
 
+        .header-link {
+            display: flex;
+            align-items: center;
+            text-decoration: none;
+            transition: var(--transition);
+        }
+
+        .header-link:active {
+            transform: scale(0.98);
+        }
+
         .nav-logo {
             height: 28px;
             margin-right: 8px;
@@ -328,7 +339,7 @@
             border-radius: 24px;
             padding: 24px;
             border: 1px dashed rgba(34, 197, 94, 0.3);
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             text-align: center;
         }
 
@@ -337,6 +348,24 @@
             color: var(--secondary);
             font-weight: 500;
             line-height: 1.6;
+        }
+
+        .store-badges {
+            display: flex;
+            gap: 12px;
+            justify-content: center;
+            margin-bottom: 40px;
+        }
+
+        .store-badge img {
+            height: 40px;
+            width: auto;
+            border-radius: 8px;
+            transition: var(--transition);
+        }
+
+        .store-badge:active img {
+            transform: scale(0.95);
         }
 
         /* Fixed Footer */
@@ -401,8 +430,10 @@
 
     <div class="app-container">
         <header>
-            <img src="../logo.png" alt="PlantSaga" class="nav-logo">
-            <span class="brand-name">PlantSaga</span>
+            <a href="../" class="header-link">
+                <img src="../logo.png" alt="PlantSaga" class="nav-logo">
+                <span class="brand-name">PlantSaga</span>
+            </a>
         </header>
 
         <div id="loader">
@@ -481,6 +512,18 @@
                         home garden. Download, login, and click the original link to bring this specimen into your
                         digital collection.
                     </p>
+                </div>
+
+                <div class="store-badges">
+                    <a href="https://apps.apple.com/us/app/plantsaga/id6757720295" class="store-badge" target="_blank">
+                        <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1314316800&h=64923838ae1c46294d306443c683b772"
+                            alt="Download on the App Store">
+                    </a>
+                    <a href="https://play.google.com/store/apps/details?id=plant.care.app" class="store-badge"
+                        target="_blank">
+                        <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png"
+                            alt="Get it on Google Play" style="height: 58px; margin-top: -9px;">
+                    </a>
                 </div>
             </div>
 
@@ -567,19 +610,19 @@
         }
 
         function populate(d) {
-            document.getElementById('plant-name').innerText = d.nickname || d.name || "Unnamed Specimen";
-            document.getElementById('sci-name').innerText = d.scientificName || "Botanical details in app";
+            document.getElementById('plant-name').innerText = d.nickname || d._cachedPlantName || d.name || "Unnamed Specimen";
+            document.getElementById('sci-name').innerText = d.scientificName || d._cachedScientificName || "Botanical details in app";
 
             // Description Fallback Logic
-            const desc = d._cachedDescription || d.description || (d.notes && d.notes.length > 0 ? d.notes[0] : null);
+            const desc = d.description || d._cachedDescription || (d.notes && d.notes.length > 0 ? d.notes[0] : null);
             document.getElementById('description').innerText = desc || "A beautiful specimen being nurtured in a private collection.";
 
-            // Care Stats
+            // Care Stats - Matching app fallbacks exactly
             const c = d.careInstructions || {};
-            document.getElementById('water').innerText = c.watering?.frequency || "Check Soil";
-            document.getElementById('light').innerText = c.sunlight?.requirement || "Partial Light";
-            document.getElementById('temp').innerText = c.temperature ? `${c.temperature.min}-${c.temperature.max}°C` : "Room Temp";
-            document.getElementById('humidity').innerText = c.humidity?.requirement || "Normal";
+            document.getElementById('water').innerText = c.watering?.frequency || "Weekly";
+            document.getElementById('light').innerText = c.sunlight?.requirement || "Bright";
+            document.getElementById('temp').innerText = c.temperature ? `${c.temperature.min || 18}-${c.temperature.max || 24}°C` : "18-24°C";
+            document.getElementById('humidity').innerText = c.humidity?.requirement || "Medium";
 
             // Gallery Management
             const photos = d.photos ? d.photos.map(p => p.url) : (d.images || []);
