Complete Redesign and Refinement of Shared Plant Experience
- Implemented a desktop-optimized two-column split-view layout.
- Imagery & Care: Positioned high-fidelity gallery and care requirement grid (Watering, Light, Temp, Humidity) in the left column.
- Branding & Conversion: Aligned header logo to top-left; placed 'About Plant', onboarding message, and Pulsing CTA in the right column.
- Data Fidelity: Mapped user-specific care stats with app-matching defaults (Weekly, Bright, Medium).
- Growth Loop: Integrated official App Store and Google Play Store badges for easy app discovery.
- Responsive Design: Ensured graceful stacking of columns for mobile and tablet viewers.
- Theme: Standardized on Sage Green (#E8EFE8) with Outfit/Inter typography system.

--- a/share/index.html
+++ b/share/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 
-        PlantSaga Shared Plant Preview Page (Split-View Redesign)
-        Features: Two-column desktop layout, Product-style gallery, Sage Green theme, Pulse conversion button, Emotional onboarding.
-        Data: Direct path fetching (users/{uid}/plants/{pid}) with global follow-back.
+        PlantSaga Shared Plant Preview Page (Split-View Redesign v2)
+        - Layout: Desktop two-column split-view (Imagery Left, Content Right)
+        - Theme: Premium Sage Green (#E8EFE8)
+        - Components: Product gallery, Care grid, Pulsing CTA, App store badges
+        - Mobile: Responsive stacking layout
     -->
     <title>PlantSaga | Shared Plant</title>
 
